@@ -1,6 +1,12 @@
+2006-03-26 Jim Garlick <garlick@llnl.gov>
+
+    * src/device_serial.c: support baud rates up to B500000 if system does.
+
+    * etc/phantom4.dev: get working on early v4.0 module with broken P0|P1.
+
 2006-03-13 Jim Garlick <garlick@llnl.gov>
 
-    * etc/ibmbladecenter.dev: New.
+    * etc/ibmbladecenter.dev: New, rough cut.
 
 2006-02-16 Jim Garlick <garlick@llnl.gov>
 
